--- a/EmployeeActivityTracker/EmployeeActivityTracker/EmployeeActivityTracker.csproj
+++ b/EmployeeActivityTracker/EmployeeActivityTracker/EmployeeActivityTracker.csproj
@@ -19,6 +19,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
+    <PackageReference Include="Serilog.Extensions.Logging.File" Version="2.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
   </ItemGroup>
 
